// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<div
  render={[Function]}
  renderCreated={[Function]}
  setCurrentUser={[Function]}
>
  New - 
  <div>
    render - 
    <div
      className="Component-root-42"
    >
      <div
        className="Component-header-41"
      />
      <div
        className="Component-container-40"
      >
        <h2
          className="MuiTypography-root-43 MuiTypography-h2-56 MuiTypography-alignCenter-66"
        >
          PRIZEY
        </h2>
        <div
          className="Component-caption-38"
        />
        <div
          className="Component-children-39"
        >
          <h5
            className="MuiTypography-root-43 MuiTypography-h5-59 MuiTypography-alignCenter-66 Component-pageTitle-37"
          >
            Recover Your Password
          </h5>
          <div
            onSubmit={[Function]}
            renderButton={[Function]}
          >
            NewPassword - 
            <button
              className="MuiButtonBase-root-27 MuiButton-root-1 MuiButton-contained-12 MuiButton-containedPrimary-13 MuiButton-raised-15 MuiButton-raisedPrimary-16 MuiButton-fullWidth-26"
              disabled={false}
              onBlur={[Function]}
              onContextMenu={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onSubmit={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              renderButton={[Function]}
              tabIndex="0"
              type="button"
            >
              <span
                className="MuiButton-label-2"
              >
                SET NEW PASSWORD
              </span>
              <span
                className="MuiTouchRipple-root-30"
              />
            </button>
          </div>
        </div>
        <p
          className="MuiTypography-root-43 MuiTypography-body1-52 MuiTypography-alignCenter-66"
        />
      </div>
    </div>
  </div>
  <div>
    renderCreated - 
    <div
      noThrow={true}
      to="/"
    >
      Redirect - 
    </div>
  </div>
</div>
`;

exports[`renders the form correctly 1`] = `
<button
  className="MuiButtonBase-root-27 MuiButton-root-1 MuiButton-contained-12 MuiButton-containedPrimary-13 MuiButton-raised-15 MuiButton-raisedPrimary-16 MuiButton-fullWidth-26"
  disabled={false}
  onBlur={[Function]}
  onContextMenu={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex="0"
  type="button"
>
  <span
    className="MuiButton-label-2"
  >
    SET NEW PASSWORD
  </span>
  <span
    className="MuiTouchRipple-root-30"
  />
</button>
`;
